--- a/3_seedbank_clusterNMDSdiversity.Rmd
+++ b/3_seedbank_clusterNMDSdiversity.Rmd
@@ -22,6 +22,7 @@ library(ggvegan)
 library(here)
 library(cowplot)
 library(factoextra)
+library(ggrepel) # avoid overlaping labes in ggplot2
 
 # library(ggpubr) # customize ggplot2 for publication
 # library(broom)
@@ -33,9 +34,17 @@ library(factoextra)
 # library(ggnewscale)
 
 # dune data: https://www.rpubs.com/RGrieger/545184
+```
+
+
+```{r}
+
 
 # Set seed for analyses
 set.seed(8003)
+
+
+
 ```
 
 
@@ -655,7 +664,7 @@ ggplot(mds.df,
                aes(x = 0, xend = NMDS1, y = 0, yend = NMDS2),
                arrow = arrow(length = unit(0.25, "cm")),
                col = "black") +
-  geom_text(data = spp, 
+  geom_text_repel(data = spp, 
             aes(label = species),  
             position = position_jitter(width = 0.0, height = 0.1)) +
    scale_color_manual(values = c("1" = "orange", "2" = "purple", "3" = "green"),
