--- a/3_seedbank_clusterNMDSdiversity.Rmd
+++ b/3_seedbank_clusterNMDSdiversity.Rmd
@@ -9,7 +9,7 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-
+# library
 ```{r install libraries}
 
 ###### load libraries
@@ -47,7 +47,7 @@ set.seed(8003)
 
 ```
 
-
+# load data
 ```{r load deg_seedbank csv}
 
 ######### load data
@@ -72,6 +72,7 @@ str(seedbank_load)
 # sort(unique(seedbank_load$family))
 # sort(unique(seedbank_load$lifeform))
 # sort(unique(seedbank_load$lifescycle))
+
 
 ```
 
@@ -129,6 +130,14 @@ seedbank_load_v <- seedbank_load %>%
     genus_abundance == "Unknown Phrymaceae  " ~ "Unknown Phrymaceae",
     TRUE ~ as.character(genus_abundance)  # Keep other observations unchanged
   )) 
+
+sppchar <- seedbank_load_v %>%  
+  dplyr::select(genus_abundance, lifeform, status, lifescycle, family) %>% 
+  rename(species = genus_abundance)
+
+
+
+
 ```
 
 (3) Create new columns for SITE_CORE, SITE_CORE_DEPTH, SITE_CORE_DEPTH_TREATMENT, SITE_TREATMENT, SITE_DEPTH for seed bank data. 
@@ -198,6 +207,8 @@ germination_depthtreat <- germination_m2_raw %>%
   dplyr::select(stand, site, depth_name, subsample_g, treatment, species_diversity, genus_abundance, lifeform, status, lifescycle, family, count, stand_core, stand_core_depth, stand_core_depth_treat, n_per_g, native_shrub, nonnative_grass)
 
 glimpse(germination_depthtreat)
+
+
 ```
 
  UPDATED STACKED FIGURE: Stacked germination by family (January 2024)
@@ -474,9 +485,19 @@ rect.hclust(hcluster.abs.cover, k = 3)
 # Cut tree into groups
 sub_grp <- cutree(hcluster.abs.cover, k = 3)
 
-
 # Number of members in each cluster
 table(sub_grp)
+
+# Calculate the distance to centroid for each cluster
+bd <- betadisper(d, sub_grp)
+centroid_coords <- bd$centroids
+centroid_distances <- round(vegdist(centroid_coords, method = "euclidean"), 2) # Calculate the distances between the centroids
+#       1       2
+# 2     0.69     
+# 3     0.66    0.68
+# 
+# 1 and 2 are most different
+# 1 and 3 are most similar
 
 
 # Combine group labels into species matrix
@@ -636,8 +657,8 @@ genp
 pv <- genp$vectors$pvals %>% # extract p-values for each species
   as.data.frame() %>% 
   rownames_to_column("species") %>% 
-  dplyr::rename("pvals" = ".") %>% 
-  left_join(sppchar, by = "species")
+  dplyr::rename("pvals" = ".") #%>% 
+ #left_join(sppchar, by = "species")
 pv
 
 # extract coordinates for species, only keep species with p-val = 0.05
@@ -652,7 +673,7 @@ length(spp$species) #  <- limited number for visual clarity
 
 
 
-ggplot(mds.df,
+seed.nmds <- ggplot(mds.df,
        aes(x = NMDS1,
            y = NMDS2
            )) +
@@ -671,7 +692,8 @@ ggplot(mds.df,
                      labels = c("1" = "Group1 - DEG", "2" = "Group2 - ENH", "3" = "Group3 - INT")) +
   scale_shape_manual(values = c("1" = 16, "2" = 17, "3" = 18),
                      labels = c("1" = "Group1 - DEG", "2" = "Group2 - ENH", "3" = "Group3 - INT")) +
-  theme_bw()
+  theme_bw() +
+  xlim(-3, 2)
 
 
 
